[gd_scene load_steps=4 format=3 uid="uid://dskfafe1j24gy"]

[ext_resource type="Script" uid="uid://bxm17xerd1omb" path="res://scripts/menu_inicial.gd" id="1_5euyt"]

[sub_resource type="Gradient" id="Gradient_yqeox"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yqeox"]
gradient = SubResource("Gradient_yqeox")
fill_from = Vector2(0, 1)
fill_to = Vector2(0.690265, 0.323009)

[node name="Interface_Inicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5euyt")

[node name="background_interface" type="TextureRect" parent="."]
modulate = Color(0.186814, 9.33737e-05, 0.619952, 1)
self_modulate = Color(0.61339, 0.61339, 0.61339, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_yqeox")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -76.5
offset_right = 59.5
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="play" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Novo jogo"

[node name="carregar" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Carregar jogo"

[node name="config" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Configurações"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = 168.0
offset_right = 57.0
offset_bottom = 191.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="nome_jogo" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "BLOCK CONSTRUCT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/carregar" to="." method="_on_carregar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
